Implemented pull request api
- commits and merge handler
- Dockerfile
